# footprint

./: CMakeLists.txt  agg_trade.cpp  download_data.py  footprint.cpp  footprint.h  sort.cpp
include/: config.h  data_fetcher.h  footprint.h  io_utils.h  output_handler.h  processor.h  trade.h
src/: binance_fetcher.cpp  footprint.cpp  io_utils.cpp  main.cpp  output_handler.cpp  processor.cpp
